--- a/Narmathaa.ipynb
+++ b/Narmathaa.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b0de5b1",
+   "metadata": {},
+   "source": [
+    "# Descriptive Analysis and Statistics:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "54ebd837",
@@ -27,17 +35,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f955c857",
-   "metadata": {},
-   "source": [
-    "Descriptive Analysis and Statistics:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a760c772",
+   "execution_count": 4,
+   "id": "9c8483b5",
    "metadata": {},
    "outputs": [
     {
@@ -363,32 +363,21 @@
        "[7156 rows x 16 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#To read the original Covid dataset from the GitHUb\n",
     "dataset = get_data.read_csv('epidemic','clusters')\n",
     "dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7be4655d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Replacing status column from 'ended' and 'active' to 0 and 1, where 0 is ended and 1 is active\n",
-    "status_dict = {'ended':0, 'active':1}\n",
-    "dataset.replace({'status': status_dict},inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7cdbd530",
+   "execution_count": 7,
+   "id": "e5fc80a5",
    "metadata": {},
    "outputs": [
     {
@@ -714,19 +703,24 @@
        "[7156 rows x 16 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Replacing status column from 'ended' and 'active' to 0 and 1, where 0 is ended and 1 is active\n",
+    "status_dict = {'ended':0, 'active':1}\n",
+    "dataset.replace({'status': status_dict},inplace=True)\n",
+    "\n",
+    "#To view the dataset with replaced data\n",
     "dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6260b1bf",
+   "execution_count": 8,
+   "id": "cc0a5c86",
    "metadata": {},
    "outputs": [
     {
@@ -875,19 +869,28 @@
        "max       1.000000    37.000000  7204.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#To view the 8 statistical properties of each attribute\n",
     "dataset.describe()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0224c775",
+   "metadata": {},
+   "source": [
+    "To view the class distribution for the 'status' column and 'category' column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "034118a5",
+   "execution_count": 11,
+   "id": "f984b27c",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +902,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,8 +913,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "96bd3ef0",
+   "execution_count": 12,
+   "id": "71a635ff",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +931,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,22 +939,6 @@
    "source": [
     "dataset.groupby('category').size()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b285c61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5fc80a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
