--- a/Narmathaa.ipynb
+++ b/Narmathaa.ipynb
@@ -5,7 +5,7 @@
    "id": "4b0de5b1",
    "metadata": {},
    "source": [
-    "# Descriptive Analysis and Statistics:"
+    "# Descriptive Analysis and Statistics of the whole Cluster dataset:"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9c8483b5",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "[7156 rows x 16 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,360 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "903c3c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>state</th>\n",
+       "      <th>district</th>\n",
+       "      <th>date_announced</th>\n",
+       "      <th>date_last_onset</th>\n",
+       "      <th>category</th>\n",
+       "      <th>status</th>\n",
+       "      <th>cases_new</th>\n",
+       "      <th>cases_total</th>\n",
+       "      <th>cases_active</th>\n",
+       "      <th>tests</th>\n",
+       "      <th>icu</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>summary_bm</th>\n",
+       "      <th>summary_en</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KLUSTER WARGA JEPUN</td>\n",
+       "      <td>W.P. KUALA LUMPUR</td>\n",
+       "      <td>LEMBAH PANTAI</td>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>2020-03-09</td>\n",
+       "      <td>import</td>\n",
+       "      <td>ended</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>267</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KLUSTER UDA</td>\n",
+       "      <td>JOHOR,NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMP...</td>\n",
+       "      <td>PELBAGAI</td>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>import</td>\n",
+       "      <td>ended</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1864</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>142</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KLUSTER KEAGAMAAN (TABLIGH SRI PETALING)</td>\n",
+       "      <td>not stated</td>\n",
+       "      <td>PELBAGAI</td>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>2020-03-11</td>\n",
+       "      <td>religious</td>\n",
+       "      <td>ended</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42023</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KLUSTER TABLIGH NEW DELHI</td>\n",
+       "      <td>NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMPUR,W.P...</td>\n",
+       "      <td>PELBAGAI</td>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>import</td>\n",
+       "      <td>ended</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KLUSTER AIROD</td>\n",
+       "      <td>PAHANG</td>\n",
+       "      <td>KUANTAN</td>\n",
+       "      <td>2020-03-31</td>\n",
+       "      <td>2020-03-31</td>\n",
+       "      <td>workplace</td>\n",
+       "      <td>ended</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>734</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7151</th>\n",
+       "      <td>KLUSTER DUA JALAN PADANG GOLF 3</td>\n",
+       "      <td>SELANGOR</td>\n",
+       "      <td>HULU SELANGOR</td>\n",
+       "      <td>2022-11-26</td>\n",
+       "      <td>2022-11-25</td>\n",
+       "      <td>highRisk</td>\n",
+       "      <td>active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kluster ini merupakan kluster berulang untuk k...</td>\n",
+       "      <td>This is a third recurring cluster involving re...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7152</th>\n",
+       "      <td>KLUSTER JALAN PADANG GOLF 5</td>\n",
+       "      <td>SELANGOR</td>\n",
+       "      <td>HULU SELANGOR</td>\n",
+       "      <td>2022-11-27</td>\n",
+       "      <td>2022-11-26</td>\n",
+       "      <td>highRisk</td>\n",
+       "      <td>active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kluster ini merupakan kluster berulang kali ke...</td>\n",
+       "      <td>This cluster is the fifth repeated cluster inv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7153</th>\n",
+       "      <td>KLUSTER DAH BATU 19</td>\n",
+       "      <td>KEDAH</td>\n",
+       "      <td>KUBANG PASU</td>\n",
+       "      <td>2022-11-27</td>\n",
+       "      <td>2022-12-04</td>\n",
+       "      <td>education</td>\n",
+       "      <td>active</td>\n",
+       "      <td>12</td>\n",
+       "      <td>84</td>\n",
+       "      <td>84</td>\n",
+       "      <td>214</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kluster ini melibatkan pelajar-pelajar sebuah ...</td>\n",
+       "      <td>This cluster involves students from an educati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7154</th>\n",
+       "      <td>KLUSTER DAH TERABAK</td>\n",
+       "      <td>KEDAH</td>\n",
+       "      <td>KUBANG PASU</td>\n",
+       "      <td>2022-12-01</td>\n",
+       "      <td>2022-12-04</td>\n",
+       "      <td>education</td>\n",
+       "      <td>active</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89</td>\n",
+       "      <td>89</td>\n",
+       "      <td>702</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kluster ini melibatkan pelajar-pelajar sebuah ...</td>\n",
+       "      <td>This cluster involves the students of an educa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7155</th>\n",
+       "      <td>KLUSTER JALAN KAKI BUKIT</td>\n",
+       "      <td>PERLIS</td>\n",
+       "      <td>KANGAR</td>\n",
+       "      <td>2022-12-02</td>\n",
+       "      <td>2022-12-03</td>\n",
+       "      <td>education</td>\n",
+       "      <td>active</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kluster ini melibatkan pelajar-pelajar sebuah ...</td>\n",
+       "      <td>This cluster involves the students of an educa...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7156 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       cluster  \\\n",
+       "0                          KLUSTER WARGA JEPUN   \n",
+       "1                                  KLUSTER UDA   \n",
+       "2     KLUSTER KEAGAMAAN (TABLIGH SRI PETALING)   \n",
+       "3                    KLUSTER TABLIGH NEW DELHI   \n",
+       "4                                KLUSTER AIROD   \n",
+       "...                                        ...   \n",
+       "7151           KLUSTER DUA JALAN PADANG GOLF 3   \n",
+       "7152               KLUSTER JALAN PADANG GOLF 5   \n",
+       "7153                       KLUSTER DAH BATU 19   \n",
+       "7154                       KLUSTER DAH TERABAK   \n",
+       "7155                  KLUSTER JALAN KAKI BUKIT   \n",
+       "\n",
+       "                                                  state       district  \\\n",
+       "0                                     W.P. KUALA LUMPUR  LEMBAH PANTAI   \n",
+       "1     JOHOR,NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMP...       PELBAGAI   \n",
+       "2                                            not stated       PELBAGAI   \n",
+       "3     NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMPUR,W.P...       PELBAGAI   \n",
+       "4                                                PAHANG        KUANTAN   \n",
+       "...                                                 ...            ...   \n",
+       "7151                                           SELANGOR  HULU SELANGOR   \n",
+       "7152                                           SELANGOR  HULU SELANGOR   \n",
+       "7153                                              KEDAH    KUBANG PASU   \n",
+       "7154                                              KEDAH    KUBANG PASU   \n",
+       "7155                                             PERLIS         KANGAR   \n",
+       "\n",
+       "     date_announced date_last_onset   category  status  cases_new  \\\n",
+       "0        2020-03-01      2020-03-09     import   ended          0   \n",
+       "1        2020-03-04      2020-03-01     import   ended          0   \n",
+       "2        2020-03-13      2020-03-11  religious   ended          0   \n",
+       "3        2020-03-16      2020-03-20     import   ended          0   \n",
+       "4        2020-03-31      2020-03-31  workplace   ended          0   \n",
+       "...             ...             ...        ...     ...        ...   \n",
+       "7151     2022-11-26      2022-11-25   highRisk  active          0   \n",
+       "7152     2022-11-27      2022-11-26   highRisk  active          0   \n",
+       "7153     2022-11-27      2022-12-04  education  active         12   \n",
+       "7154     2022-12-01      2022-12-04  education  active          2   \n",
+       "7155     2022-12-02      2022-12-03  education  active          0   \n",
+       "\n",
+       "      cases_total  cases_active  tests  icu  deaths  recovered  \\\n",
+       "0               3             0    267    0       0          3   \n",
+       "1             144             0   1864    0       2        142   \n",
+       "2            2022             0  42023    0      34       1988   \n",
+       "3              24             0     57    0       0         24   \n",
+       "4              65             0    734    0       0         65   \n",
+       "...           ...           ...    ...  ...     ...        ...   \n",
+       "7151           25            25     35    0       0          0   \n",
+       "7152            3             3     13    0       0          0   \n",
+       "7153           84            84    214    0       0          0   \n",
+       "7154           89            89    702    0       0          0   \n",
+       "7155           12            12     12    0       0          0   \n",
+       "\n",
+       "                                             summary_bm  \\\n",
+       "0                                                   NaN   \n",
+       "1                                                   NaN   \n",
+       "2                                                   NaN   \n",
+       "3                                                   NaN   \n",
+       "4                                                   NaN   \n",
+       "...                                                 ...   \n",
+       "7151  Kluster ini merupakan kluster berulang untuk k...   \n",
+       "7152  Kluster ini merupakan kluster berulang kali ke...   \n",
+       "7153  Kluster ini melibatkan pelajar-pelajar sebuah ...   \n",
+       "7154  Kluster ini melibatkan pelajar-pelajar sebuah ...   \n",
+       "7155  Kluster ini melibatkan pelajar-pelajar sebuah ...   \n",
+       "\n",
+       "                                             summary_en  \n",
+       "0                                                   NaN  \n",
+       "1                                                   NaN  \n",
+       "2                                                   NaN  \n",
+       "3                                                   NaN  \n",
+       "4                                                   NaN  \n",
+       "...                                                 ...  \n",
+       "7151  This is a third recurring cluster involving re...  \n",
+       "7152  This cluster is the fifth repeated cluster inv...  \n",
+       "7153  This cluster involves students from an educati...  \n",
+       "7154  This cluster involves the students of an educa...  \n",
+       "7155  This cluster involves the students of an educa...  \n",
+       "\n",
+       "[7156 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#States converted to strings\n",
+    "df_1 = get_data.convert_state_code(dataset)\n",
+    "df_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "cc0a5c86",
    "metadata": {},
    "outputs": [
@@ -502,14 +855,14 @@
        "max      37.000000  7204.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#To view the 8 statistical properties of each attribute\n",
-    "dataset.describe()"
+    "df_1.describe()"
    ]
   },
   {
@@ -522,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f984b27c",
    "metadata": {},
    "outputs": [
@@ -530,23 +883,23 @@
      "data": {
       "text/plain": [
        "status\n",
-       "0    7099\n",
-       "1      57\n",
+       "active      57\n",
+       "ended     7099\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.groupby('status').size()"
+    "df_1.groupby('status').size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "71a635ff",
    "metadata": {},
    "outputs": [
@@ -564,13 +917,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.groupby('category').size()"
+    "df_1.groupby('category').size()"
    ]
   }
  ],
@@ -590,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
