Added get_data.null_values function

--- a/main.ipynb
+++ b/main.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ELT\n",
     "#Extraction = done extraction from MOH COVID19 Repo by using Github Desktop\n",
     "#Loading = by using user def 'get_data' function called read_csv \n",
     "#The function can call any dataset in MOH covid19 repo by specifying folder name and filename"
@@ -40,23 +41,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load clusters dataset\n",
+    "## Load clusters dataset\n",
     "df = get_data.read_csv('epidemic','clusters')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e6440bd",
+   "id": "deed577a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transform dataset\n",
+    "## Transform dataset\n",
     "df = get_data.convert_state_code(df) #------------convert state from numbers to known category\n",
     "df = df.drop(['summary_en','summary_bm'],axis=1) #-------------drop column that are not specific to analysis\n",
     "datecolumn = ['date_announced','date_last_onset']\n",
     "for column in datecolumn:\n",
-    "    df[column] = pd.to_datetime(df[column],yearfirst=True)"
+    "    df[column] = pd.to_datetime(df[column],yearfirst=True) #----------------parse date columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8f05f300",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of NaN values present: cluster             0\n",
+      "state               0\n",
+      "district           13\n",
+      "date_announced      0\n",
+      "date_last_onset     0\n",
+      "category            0\n",
+      "status              0\n",
+      "cases_new           0\n",
+      "cases_total         0\n",
+      "cases_active        0\n",
+      "tests               0\n",
+      "icu                 0\n",
+      "deaths              0\n",
+      "recovered           0\n",
+      "dtype: int64\n",
+      "\n",
+      "null values in district replaced with 'not_stated'\n",
+      "\n",
+      "Number of NaN values present:  + cluster            0\n",
+      "state              0\n",
+      "district           0\n",
+      "date_announced     0\n",
+      "date_last_onset    0\n",
+      "category           0\n",
+      "status             0\n",
+      "cases_new          0\n",
+      "cases_total        0\n",
+      "cases_active       0\n",
+      "tests              0\n",
+      "icu                0\n",
+      "deaths             0\n",
+      "recovered          0\n",
+      "dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Overview and Transform\n",
+    "df = get_data.null_values(df,'district','not_stated') #---------------read null values from a column and return null statement"
    ]
   },
   {
@@ -228,7 +281,7 @@
     }
    ],
    "source": [
-    "# Overview of dataset\n",
+    "## Overview of dataset\n",
     "df.head() #--------------------top 5 of dataset"
    ]
   },
@@ -400,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ccf399e6",
+   "id": "06e52245",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +467,7 @@
       "---  ------           --------------  -----         \n",
       " 0   cluster          7156 non-null   object        \n",
       " 1   state            7156 non-null   object        \n",
-      " 2   district         7143 non-null   object        \n",
+      " 2   district         7156 non-null   object        \n",
       " 3   date_announced   7156 non-null   datetime64[ns]\n",
       " 4   date_last_onset  7156 non-null   datetime64[ns]\n",
       " 5   category         7156 non-null   object        \n",
@@ -432,16 +485,44 @@
     }
    ],
    "source": [
-    "df.info() #detect datatype for each column and null values"
+    "df.info() #-------------detect datatype for each column and null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ab80b31d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cluster', 'state', 'district', 'date_announced', 'date_last_onset',\n",
+       "       'category', 'status', 'cases_new', 'cases_total', 'cases_active',\n",
+       "       'tests', 'icu', 'deaths', 'recovered'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns #---------------features available in the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "012c7ec6",
+   "id": "5fc1e8aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Descriptive Analysis"
+   ]
   }
  ],
  "metadata": {
