--- a/Nisha.ipynb
+++ b/Nisha.ipynb
@@ -76,6 +76,510 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2e9fe4d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "272b17a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_data= pd.read_csv('https://raw.githubusercontent.com/MoH-Malaysia/covid19-public/1caf9a2289ce63da4e71339dda656be9360fa9e3/epidemic/cases_state.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d9dcf772",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>cases_new</th>\n",
+       "      <th>cases_import</th>\n",
+       "      <th>cases_recovered</th>\n",
+       "      <th>cases_active</th>\n",
+       "      <th>cases_cluster</th>\n",
+       "      <th>cases_unvax</th>\n",
+       "      <th>cases_pvax</th>\n",
+       "      <th>cases_fvax</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cases_0_4</th>\n",
+       "      <th>cases_5_11</th>\n",
+       "      <th>cases_12_17</th>\n",
+       "      <th>cases_18_29</th>\n",
+       "      <th>cases_30_39</th>\n",
+       "      <th>cases_40_49</th>\n",
+       "      <th>cases_50_59</th>\n",
+       "      <th>cases_60_69</th>\n",
+       "      <th>cases_70_79</th>\n",
+       "      <th>cases_80</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>Johor</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>Kedah</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>Kelantan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>Melaka</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-25</td>\n",
+       "      <td>Negeri Sembilan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16779</th>\n",
+       "      <td>2022-12-08</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>474</td>\n",
+       "      <td>0</td>\n",
+       "      <td>586</td>\n",
+       "      <td>4326</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>17</td>\n",
+       "      <td>20</td>\n",
+       "      <td>138</td>\n",
+       "      <td>121</td>\n",
+       "      <td>80</td>\n",
+       "      <td>43</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16780</th>\n",
+       "      <td>2022-12-08</td>\n",
+       "      <td>Terengganu</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>428</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16781</th>\n",
+       "      <td>2022-12-08</td>\n",
+       "      <td>W.P. Kuala Lumpur</td>\n",
+       "      <td>154</td>\n",
+       "      <td>0</td>\n",
+       "      <td>252</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>39</td>\n",
+       "      <td>21</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16782</th>\n",
+       "      <td>2022-12-08</td>\n",
+       "      <td>W.P. Labuan</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>127</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16783</th>\n",
+       "      <td>2022-12-08</td>\n",
+       "      <td>W.P. Putrajaya</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>550</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>30</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16784 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date              state  cases_new  cases_import  \\\n",
+       "0      2020-01-25              Johor          4             4   \n",
+       "1      2020-01-25              Kedah          0             0   \n",
+       "2      2020-01-25           Kelantan          0             0   \n",
+       "3      2020-01-25             Melaka          0             0   \n",
+       "4      2020-01-25    Negeri Sembilan          0             0   \n",
+       "...           ...                ...        ...           ...   \n",
+       "16779  2022-12-08           Selangor        474             0   \n",
+       "16780  2022-12-08         Terengganu         42             0   \n",
+       "16781  2022-12-08  W.P. Kuala Lumpur        154             0   \n",
+       "16782  2022-12-08        W.P. Labuan         19             0   \n",
+       "16783  2022-12-08     W.P. Putrajaya         75             0   \n",
+       "\n",
+       "       cases_recovered  cases_active  cases_cluster  cases_unvax  cases_pvax  \\\n",
+       "0                    0             4              0            4           0   \n",
+       "1                    0             0              0            0           0   \n",
+       "2                    0             0              0            0           0   \n",
+       "3                    0             0              0            0           0   \n",
+       "4                    0             0              0            0           0   \n",
+       "...                ...           ...            ...          ...         ...   \n",
+       "16779              586          4326              0           40           1   \n",
+       "16780               69           428              0            5           1   \n",
+       "16781              252          1504              0           18           2   \n",
+       "16782               16           127              0            4           0   \n",
+       "16783               75           550              0            5           1   \n",
+       "\n",
+       "       cases_fvax  ...  cases_0_4  cases_5_11  cases_12_17  cases_18_29  \\\n",
+       "0               0  ...          0           0            0            0   \n",
+       "1               0  ...          0           0            0            0   \n",
+       "2               0  ...          0           0            0            0   \n",
+       "3               0  ...          0           0            0            0   \n",
+       "4               0  ...          0           0            0            0   \n",
+       "...           ...  ...        ...         ...          ...          ...   \n",
+       "16779          73  ...         15          17           20          138   \n",
+       "16780          14  ...          1           1            2           12   \n",
+       "16781          22  ...          2           5            3           50   \n",
+       "16782           6  ...          1           1            0            7   \n",
+       "16783          19  ...          4           1            5           13   \n",
+       "\n",
+       "       cases_30_39  cases_40_49  cases_50_59  cases_60_69  cases_70_79  \\\n",
+       "0                0            1            0            0            0   \n",
+       "1                0            0            0            0            0   \n",
+       "2                0            0            0            0            0   \n",
+       "3                0            0            0            0            0   \n",
+       "4                0            0            0            0            0   \n",
+       "...            ...          ...          ...          ...          ...   \n",
+       "16779          121           80           43           11           16   \n",
+       "16780           13            6            2            2            2   \n",
+       "16781           39           21           15            7            7   \n",
+       "16782            5            2            1            1            0   \n",
+       "16783           30           16            3            0            2   \n",
+       "\n",
+       "       cases_80  \n",
+       "0             0  \n",
+       "1             0  \n",
+       "2             0  \n",
+       "3             0  \n",
+       "4             0  \n",
+       "...         ...  \n",
+       "16779        13  \n",
+       "16780         1  \n",
+       "16781         5  \n",
+       "16782         1  \n",
+       "16783         1  \n",
+       "\n",
+       "[16784 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covid_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bef3c0fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data = covid_data[covid_data['state']=='MY'].drop(['state','cases_cluster'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a9b9ee73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>cases_new</th>\n",
+       "      <th>cases_import</th>\n",
+       "      <th>cases_recovered</th>\n",
+       "      <th>cases_active</th>\n",
+       "      <th>cases_unvax</th>\n",
+       "      <th>cases_pvax</th>\n",
+       "      <th>cases_fvax</th>\n",
+       "      <th>cases_boost</th>\n",
+       "      <th>cases_child</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cases_0_4</th>\n",
+       "      <th>cases_5_11</th>\n",
+       "      <th>cases_12_17</th>\n",
+       "      <th>cases_18_29</th>\n",
+       "      <th>cases_30_39</th>\n",
+       "      <th>cases_40_49</th>\n",
+       "      <th>cases_50_59</th>\n",
+       "      <th>cases_60_69</th>\n",
+       "      <th>cases_70_79</th>\n",
+       "      <th>cases_80</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, cases_new, cases_import, cases_recovered, cases_active, cases_unvax, cases_pvax, cases_fvax, cases_boost, cases_child, cases_adolescent, cases_adult, cases_elderly, cases_0_4, cases_5_11, cases_12_17, cases_18_29, cases_30_39, cases_40_49, cases_50_59, cases_60_69, cases_70_79, cases_80]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_data"
+   ]
   }
  ],
  "metadata": {
@@ -94,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
