Clean up notebook
Individual Notebook added

--- a/main.ipynb
+++ b/main.ipynb
@@ -2348,6 +2348,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "375270d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['W.P. KUALA LUMPUR',\n",
+       "       'JOHOR,NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'not stated',\n",
+       "       'NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'PAHANG', 'SARAWAK',\n",
+       "       'JOHOR,KEDAH,KELANTAN,MELAKA,NEGERI SEMBILAN,PERAK,SELANGOR,TERENGGANU,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'JOHOR', 'NEGERI SEMBILAN', 'MELAKA', 'SELANGOR', 'PULAU PINANG',\n",
+       "       'KELANTAN,PAHANG', 'PAHANG,W.P. KUALA LUMPUR', 'SABAH',\n",
+       "       'MELAKA,NEGERI SEMBILAN,SELANGOR,SARAWAK,W.P. PUTRAJAYA',\n",
+       "       'JOHOR,SELANGOR', 'SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'MELAKA,NEGERI SEMBILAN',\n",
+       "       'NEGERI SEMBILAN,PAHANG,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'NEGERI SEMBILAN,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'NEGERI SEMBILAN,SELANGOR', 'W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'MELAKA,SELANGOR', 'TERENGGANU', 'KEDAH,PULAU PINANG,PERLIS',\n",
+       "       'SELANGOR,W.P. PUTRAJAYA', 'PULAU PINANG,PERAK',\n",
+       "       'KEDAH,PULAU PINANG', 'KEDAH', 'KEDAH,PERLIS',\n",
+       "       'PULAU PINANG,SABAH', 'NEGERI SEMBILAN,SABAH,W.P. KUALA LUMPUR',\n",
+       "       'JOHOR,NEGERI SEMBILAN,SELANGOR,W.P. PUTRAJAYA',\n",
+       "       'JOHOR,KELANTAN,PAHANG,PERAK,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'KEDAH,NEGERI SEMBILAN,SELANGOR', 'PERAK',\n",
+       "       'PERAK,SELANGOR,W.P. KUALA LUMPUR', 'W.P. LABUAN',\n",
+       "       'NEGERI SEMBILAN,PERAK,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'SELANGOR,SARAWAK',\n",
+       "       'JOHOR,KELANTAN,NEGERI SEMBILAN,PAHANG,PERAK,SELANGOR,TERENGGANU,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'MELAKA,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'NEGERI SEMBILAN,SELANGOR,SABAH', 'JOHOR,W.P. LABUAN',\n",
+       "       'PULAU PINANG,SELANGOR,W.P. KUALA LUMPUR', 'JOHOR,MELAKA',\n",
+       "       'PULAU PINANG,PERLIS',\n",
+       "       'JOHOR,SELANGOR,TERENGGANU,W.P. KUALA LUMPUR',\n",
+       "       'NEGERI SEMBILAN,W.P. PUTRAJAYA', 'SELANGOR,SABAH',\n",
+       "       'JOHOR,KEDAH,PULAU PINANG,PERAK,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'MELAKA,PERAK,SELANGOR,TERENGGANU,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'TERENGGANU,SABAH', 'NEGERI SEMBILAN,W.P. LABUAN',\n",
+       "       'KEDAH,PULAU PINANG,PERAK',\n",
+       "       'PAHANG,PERAK,SELANGOR,W.P. KUALA LUMPUR', 'PULAU PINANG,SELANGOR',\n",
+       "       'MELAKA,SABAH,SARAWAK', 'PERAK,SARAWAK',\n",
+       "       'JOHOR,KELANTAN,MELAKA,NEGERI SEMBILAN,PERAK,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'SELANGOR,TERENGGANU', 'PAHANG,SELANGOR',\n",
+       "       'JOHOR,PERAK,SELANGOR,W.P. KUALA LUMPUR', 'W.P. PUTRAJAYA',\n",
+       "       'KEDAH,PULAU PINANG,PERAK,PERLIS',\n",
+       "       'KELANTAN,NEGERI SEMBILAN,SELANGOR',\n",
+       "       'SELANGOR,SARAWAK,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'SELANGOR,TERENGGANU,W.P. KUALA LUMPUR',\n",
+       "       'NEGERI SEMBILAN,SELANGOR,TERENGGANU,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'KELANTAN,SELANGOR', 'KELANTAN,TERENGGANU',\n",
+       "       'MELAKA,NEGERI SEMBILAN,SELANGOR,W.P. PUTRAJAYA',\n",
+       "       'JOHOR,MELAKA,NEGERI SEMBILAN,PERAK,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'KEDAH,SELANGOR,W.P. KUALA LUMPUR', 'KELANTAN',\n",
+       "       'JOHOR,PERAK,SELANGOR', 'JOHOR,TERENGGANU',\n",
+       "       'NEGERI SEMBILAN,PAHANG,SELANGOR',\n",
+       "       'MELAKA,NEGERI SEMBILAN,PERAK,SELANGOR,W.P. PUTRAJAYA',\n",
+       "       'JOHOR,KELANTAN,PERAK', 'NEGERI SEMBILAN,W.P. KUALA LUMPUR',\n",
+       "       'NEGERI SEMBILAN,PERAK,W.P. KUALA LUMPUR',\n",
+       "       'PAHANG,SELANGOR,W.P. KUALA LUMPUR', 'KEDAH,PERAK',\n",
+       "       'KELANTAN,NEGERI SEMBILAN,PULAU PINANG,SELANGOR,TERENGGANU',\n",
+       "       'JOHOR,KEDAH', 'PERAK,W.P. KUALA LUMPUR',\n",
+       "       'MELAKA,NEGERI SEMBILAN,SELANGOR',\n",
+       "       'MELAKA,PAHANG,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'PERAK,SELANGOR,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'NEGERI SEMBILAN,SELANGOR,W.P. PUTRAJAYA',\n",
+       "       'PAHANG,SELANGOR,TERENGGANU', 'JOHOR,PAHANG', 'PERAK,SELANGOR',\n",
+       "       'KEDAH,MELAKA', 'KELANTAN,SELANGOR,TERENGGANU',\n",
+       "       'KELANTAN,PULAU PINANG', 'MELAKA,PERAK',\n",
+       "       'KELANTAN,NEGERI SEMBILAN,PAHANG', 'JOHOR,MELAKA,NEGERI SEMBILAN',\n",
+       "       'KEDAH,PULAU PINANG,TERENGGANU', 'PAHANG,TERENGGANU',\n",
+       "       'JOHOR,KELANTAN', 'JOHOR,MELAKA,NEGERI SEMBILAN,SELANGOR',\n",
+       "       'JOHOR,MELAKA,SELANGOR', 'JOHOR,SELANGOR,TERENGGANU',\n",
+       "       'KELANTAN,PULAU PINANG,PERAK,TERENGGANU,SABAH,W.P. KUALA LUMPUR',\n",
+       "       'JOHOR,NEGERI SEMBILAN,PERAK', 'JOHOR,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'JOHOR,NEGERI SEMBILAN', 'JOHOR,SABAH', 'KEDAH,W.P. KUALA LUMPUR',\n",
+       "       'PAHANG,PERAK', 'NEGERI SEMBILAN,W.P. KUALA LUMPUR,W.P. PUTRAJAYA',\n",
+       "       'JOHOR,W.P. KUALA LUMPUR', 'KELANTAN,W.P. PUTRAJAYA',\n",
+       "       'JOHOR,KEDAH,PERAK', 'KEDAH,PERAK,W.P. KUALA LUMPUR',\n",
+       "       'KEDAH,PERAK,PERLIS', 'KEDAH,KELANTAN,TERENGGANU',\n",
+       "       'W.P. KUALA LUMPUR,W.P. LABUAN', 'NEGERI SEMBILAN,PAHANG',\n",
+       "       'PAHANG,PERAK,W.P. KUALA LUMPUR', 'MELAKA,W.P. KUALA LUMPUR',\n",
+       "       'JOHOR,KELANTAN,PAHANG,PERAK,TERENGGANU', 'PERLIS',\n",
+       "       'SABAH,W.P. LABUAN',\n",
+       "       'KELANTAN,MELAKA,NEGERI SEMBILAN,W.P. PUTRAJAYA',\n",
+       "       'MELAKA,TERENGGANU',\n",
+       "       'NEGERI SEMBILAN,PERAK,SELANGOR,W.P. KUALA LUMPUR',\n",
+       "       'TERENGGANU,W.P. KUALA LUMPUR', 'JOHOR,PERAK', 'KEDAH,KELANTAN',\n",
+       "       'KELANTAN,PERAK', 'JOHOR,KELANTAN,TERENGGANU',\n",
+       "       'JOHOR,MELAKA,NEGERI SEMBILAN,PAHANG', 'PERAK,W.P. PUTRAJAYA',\n",
+       "       'KEDAH,PULAU PINANG,SELANGOR', 'SARAWAK,W.P. KUALA LUMPUR'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.state.unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4ae993ae",
    "metadata": {},
@@ -2357,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "caba8da2",
    "metadata": {},
    "outputs": [
@@ -2494,7 +2602,7 @@
        "recovered      7204.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2505,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "771d6956",
    "metadata": {},
    "outputs": [
@@ -2627,7 +2735,7 @@
        "workplace              3567  322135   90.309784  231.444422   53566.520664"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2639,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5d87f2f5",
    "metadata": {},
    "outputs": [
@@ -2771,7 +2879,7 @@
        "       religious              0            0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2791,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9e99dba3",
    "metadata": {},
    "outputs": [
@@ -2813,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "912d7246",
    "metadata": {},
    "outputs": [
@@ -2835,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "b39d9b6e",
    "metadata": {},
    "outputs": [
@@ -2845,7 +2953,7 @@
        "<AxesSubplot:xlabel='category'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2867,7 +2975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "72c8fd93",
    "metadata": {},
    "outputs": [
@@ -2888,7 +2996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d1470df0",
    "metadata": {
     "scrolled": false
